--- a/models/staging/jaffle_shop/stg_jaffle_shop.yml
+++ b/models/staging/jaffle_shop/stg_jaffle_shop.yml
@@ -1,14 +1,19 @@
 models:
   - name: stg_jaffle_shop__customers
+    description: The grain of this table is one unique customer per row
     columns:
       - name: customer_id
+        description: Primary key for the customers table
         data_tests:
           - unique
           - not_null
-          
+      - name: first_name
+      - name: last_name
   - name: stg_jaffle_shop__orders
+    description: One order per row
     columns:
       - name: order_id
+        description: Primary key for the order table
         data_tests:
           - unique
           - not_null
@@ -21,9 +26,11 @@ models:
                 - placed
                 - return_pending
                 - returned
-
       - name: customer_id
         data_tests:
           - relationships:
               to: ref('stg_jaffle_shop__customers')
               field: customer_id
+      - name: order_date
+        data_tests:
+          - not_null
